fixed width issue on landing page, stuck carousel to bottom of page

--- a/less/style.less
+++ b/less/style.less
@@ -16,6 +16,12 @@ ul {
 	list-style: none;
 }
 
+#carousel .row {
+	margin-left: 0 !important;
+	margin-right: 0 !important;
+	position: absolute;
+	bottom: 0;
+}
 .container-fluid {
 	background-color: none !important;
 }
